--- a/springcore/build.gradle
+++ b/springcore/build.gradle
@@ -4,6 +4,13 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.2'
 }
 
+//lombok 설정 추가 시작
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}//lombok 설정 추가 끝
+
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
@@ -16,6 +23,13 @@ repositories {
 }
 
 dependencies {
+	//lombok 라이브러리 추가 시작
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	//lombok 라이브러리 추가 끝
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
