--- a/springcore/build.gradle
+++ b/springcore/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	//lombok 라이브러리 추가 끝
 
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
